--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,12 +33,6 @@
     },
     "types": ["node"]
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts", 
-    "**/*.tsx", 
-    ".next/types/**/*.ts",
-    "types/**/*.d.ts"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "types/**/*.d.ts"],
   "exclude": ["node_modules", ".next", "dist", "build"]
 }
